--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 
 Name: Github - index.html - Redirect
 Author: Kurou
-Version: 1.0.0
+Version: 1.0.3
 Description: Website build for github repository.
 Website: https://renproject.epizy.com
 
@@ -46,6 +46,6 @@ Website: https://renproject.epizy.com
 		<br>
 	</body>
 	<footer>
-		<p id="footer-text"> kurou-kun.github.io | <a id="footer-link" target="_blank" href="https://renproject.epizy.com"> renproject.epizy.com </a> | Kurou &copy <script>document.write(new Date().getFullYear())</script> </p>
+		<p id="footer-text"> kurou-kun.github.io | renproject.epizy.com | Kurou &copy <script>document.write(new Date().getFullYear())</script> | <a id="footer-privacy" target="_blank" href="https://renproject.epizy.com/privacy-policy"> privacy policy </a> </p>
 	</footer>
 </html>
