--- a/website/index.html
+++ b/website/index.html
@@ -1,51 +1,39 @@
 <!DOCTYPE html>
-
-<!--
-
-Name: Github - index.html - Redirect
-Author: Kurou
-Version: 1.0.3
-Description: Website build for github repository.
-Website: https://renproject.epizy.com
-
--->
-
 <html>
 	<head>
-		<!-- Title -->
-		<title> Github Repository | Ren-Project </title>
-		
-		<!-- Meta tags -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
-		<!-- Links to other files -->
-		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" href="images/favicon.png" />
-		
-		<!-- Imports -->
-		
-			<!-- Google Fonts - "Dangle" | font-family: 'Dongle', sans-serif; -->
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet"> 
-		
+		<title> Kurou-Kun.GitHub.Io </title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1 id="h1-title"> kurou-kun.github.io | renproject.epizy.com </h1>
-		<div class="main">
-			<div class="top-part">
-				<img id="logo" alt="kurou-kun.github.io - logo" src="images/favicon.png" />
+		<!-- Background Image -->
+		<div class="background-image"></div>
+		<!-- Background Main -->
+		<div class="background">
+			<!-- Header -->
+			<div class="background-header">
+				<img id="background-header-logo" src="images\white.png"/>
+				<h1 id="background-header-title"> KUROU-KUN.GITHUB.IO </h1>
 			</div>
-			<div class="center-part">
-				<p id="desc"> This website is hosted with gh-pages enabled, mainly its github repository page. You can't find here anything unless you have path to it. I would recommend visiting my website by clicking the button below and maybe you will find what you are looking for. </p>
+			<div class="background-body">
+				<!-- Sidebar -->
+				<div class="background-body-sidebar-empty"></div>
+					<div class="background-body-sidebar">
+						<a href="index.html"><h2 id="sidebar-label-1">Welcome</h2></a>
+						<a href="subpages\projects.html"><h2 id="sidebar-label-2">Projects</h2></a>
+						<div class="background-body-sidebar-seperator">
+					</div>
+				</div>
+				<!-- Content -->
+				<div class="background-body-content">
+					
+				</div>
 			</div>
-			<div class="bottom-part">
-				<a href="https://renproject.epizy.com" rel="nofollow" target="_blank"> <button id="redirect" title="Redirect to main domain"> Visit Ren-Project </button> </a>
+			<!-- Footer -->
+			<div class="background-footer">
+				<h1 id="background-footer-version">v. 1.0.0</h1>
+				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
-		<br>
 	</body>
-	<footer>
-		<p id="footer-text"> kurou-kun.github.io | renproject.epizy.com | Kurou &copy <script>document.write(new Date().getFullYear())</script> | <a id="footer-privacy" target="_blank" href="https://renproject.epizy.com/privacy-policy"> privacy policy </a> </p>
-	</footer>
 </html>
