--- a/website/404.html
+++ b/website/404.html
@@ -31,8 +31,8 @@ License: CC BY-NC-SA 3.0 US
 				<!-- Sidebar -->
 				<div class="background-body-sidebar-empty"></div>
 					<div class="background-body-sidebar">
-						<a href="include\welcome.html" target="main-content"><h2 id="sidebar-label-1">Welcome</h2></a>
-						<a href="include\projects.html" target="main-content"><h2 id="sidebar-label-2">Projects</h2></a>
+						<a href="index.html"><h2 id="sidebar-label-1">Welcome</h2></a>
+						<a href="index.html"><h2 id="sidebar-label-2">Projects</h2></a>
 						<div class="background-body-sidebar-seperator">
 					</div>
 				</div>
