--- a/website/404.html
+++ b/website/404.html
@@ -12,10 +12,22 @@ License: CC BY-NC-SA 3.0 US
 	<head>
 		<!-- Settings -->
 		<title> Kurou-Kun.GitHub.Io </title>
-		
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="refresh" content="5; url=https://kurou-kun.github.io/website/index.html">
 		<!-- Imports -->
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<link rel="stylesheet" href="style.css">
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet"> 
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Fredoka', sans-serif -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Nunito', sans-serif -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
 		<!-- Background Image -->
@@ -30,20 +42,15 @@ License: CC BY-NC-SA 3.0 US
 			<div class="background-body">
 				<!-- Sidebar -->
 				<div class="background-body-sidebar-empty"></div>
-					<div class="background-body-sidebar">
-						<a href="index.html"><h2 id="sidebar-label-1">Welcome</h2></a>
-						<a href="index.html"><h2 id="sidebar-label-2">Projects</h2></a>
-						<div class="background-body-sidebar-seperator">
-					</div>
-				</div>
 				<!-- Content -->
 				<div class="background-body-content">
 					<h1 id="background-body-content-error-404">ERROR 404</h1>
+					<h2 id="background-body-content-error-404-description">Home page will be loaded in 5 seconds...</h2>
 				</div>
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version">v. 1.0.2</h1>
+				<h1 id="background-footer-version">v. 1.0.3</h1>
 				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
