--- a/website/404.html
+++ b/website/404.html
@@ -28,6 +28,10 @@ License: CC BY-NC-SA 3.0 US
 		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Nunito', sans-serif -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
+		<!-- JavaScript -->
+		<script>
+			document.addEventListener('contextmenu', event => event.preventDefault());
+		</script>
 	</head>
 	<body>
 		<!-- Background Image -->
@@ -50,7 +54,7 @@ License: CC BY-NC-SA 3.0 US
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version">v. 1.0.3</h1>
+				<h1 id="background-footer-version">v. 1.0.4</h1>
 				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
