--- a/website/index.html
+++ b/website/index.html
@@ -37,6 +37,9 @@ License: CC BY-NC-SA 3.0 US
 			window.frames['main-content'].location = url;
 			window.frames['main-content'].location.replace(url);
 		</script>
+		<script>
+			document.addEventListener('contextmenu', event => event.preventDefault());
+		</script>
 	</head>
 	<body>
 		<!-- Background Image -->
@@ -61,12 +64,12 @@ License: CC BY-NC-SA 3.0 US
 				</div>
 				<!-- Content -->
 				<div class="background-body-content">
-					<iframe name="main-content" src="include\welcome.html" id="background-body-content-iframe"></iframe>
+					<iframe name="main-content" src="include\welcome.html" scrolling="yes" id="background-body-content-iframe"></iframe>
 				</div>
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version">v. 1.0.3</h1>
+				<h1 id="background-footer-version">v. 1.0.4</h1>
 				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
