--- a/website/index.html
+++ b/website/index.html
@@ -58,6 +58,7 @@ License: CC BY-NC-SA 3.0 US
 						<ul class="background-body-sidebar-list">
 							<li><a href="include\welcome.html"  id="sidebar-text" target="main-content">Welcome</a></li>
 							<li><a href="include\projects.html"  id="sidebar-text" target="main-content">Projects</a></li>
+							<li><a href="include\repositories.html"  id="sidebar-text" target="main-content">Repositories</a></li>
 						</ul>
 						<div class="background-body-sidebar-seperator">
 					</div>
@@ -69,7 +70,7 @@ License: CC BY-NC-SA 3.0 US
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version">v. 1.0.4</h1>
+				<h1 id="background-footer-version">v. 1.0.5</h1>
 				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
