--- a/website/index.html
+++ b/website/index.html
@@ -51,6 +51,7 @@ License: CC BY-NC-SA 3.0 US
 				<img id="background-header-logo" src="images\white.png"/>
 				<h1 id="background-header-title"> KUROU-KUN.GITHUB.IO </h1>
 			</div>
+			<!-- Body -->
 			<div class="background-body">
 				<!-- Sidebar -->
 				<div class="background-body-sidebar-empty"></div>
