--- a/website/index.html
+++ b/website/index.html
@@ -38,6 +38,7 @@ License: CC BY-NC-SA 3.0 US
 			window.frames['main-content'].location.replace(url);
 		</script>
 		<script>
+			// Prevent Context Menu
 			document.addEventListener('contextmenu', event => event.preventDefault());
 		</script>
 	</head>
