--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ License: CC BY-NC-SA 3.0 US
 		<meta http-equiv="refresh" content="5; url=https://kurou-kun.github.io/website/index.html">
 		<!-- Imports -->
 		<link rel="icon" type="image/x-icon" href="website/images/favicon.ico">
-		<link rel="stylesheet" href="website/style.css">
+		<link rel="stylesheet" href="https://kurou-kun.github.io/website/style.css">
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
