--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ License: CC BY-NC-SA 3.0 US
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="refresh" content="5; url=https://kurou-kun.github.io/website/index.html">
 		<!-- Imports -->
-		<link rel="icon" type="image/x-icon" href="website/images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="https://kurou-kun.github.io/website/images/favicon.ico">
 		<link rel="stylesheet" href="https://kurou-kun.github.io/website/style.css">
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace -->
@@ -41,7 +41,7 @@ License: CC BY-NC-SA 3.0 US
 		<div class="background">
 			<!-- Header -->
 			<div class="background-header">
-				<img id="background-header-logo" src="website/images\white.png"/>
+				<img id="background-header-logo" src="https://kurou-kun.github.io/website/images/white.png"/>
 				<h1 id="background-header-title"> KUROU-KUN.GITHUB.IO </h1>
 			</div>
 			<div class="background-body">
