--- a/website/index.html
+++ b/website/index.html
@@ -41,6 +41,15 @@ License: CC BY-NC-SA 3.0 US
 			// Prevent Context Menu
 			document.addEventListener('contextmenu', event => event.preventDefault());
 		</script>
+		<script>
+			$(document).keydown(function (event) {
+   				if (event.keyCode == 123) { // Prevent F12
+        				return false;
+    				} else if (event.ctrlKey && event.shiftKey && event.keyCode == 73) { // Prevent Ctrl+Shift+I        
+        				return false;
+    				}
+			});
+		</script>
 	</head>
 	<body>
 		<!-- Background Image -->
