--- a/website/index.html
+++ b/website/index.html
@@ -42,13 +42,28 @@ License: CC BY-NC-SA 3.0 US
 			document.addEventListener('contextmenu', event => event.preventDefault());
 		</script>
 		<script>
-			$(document).keydown(function (event) {
-   				if (event.keyCode == 123) { // Prevent F12
-        				return false;
-    				} else if (event.ctrlKey && event.shiftKey && event.keyCode == 73) { // Prevent Ctrl+Shift+I        
-        				return false;
-    				}
-			});
+			document.onkeydown = function (e) {
+ 
+        			// disable F12 key
+        			if(e.keyCode == 123) {
+            				return false;
+        			}
+ 
+        			// disable I key
+        			if(e.ctrlKey && e.shiftKey && e.keyCode == 73){
+           				return false;
+        			}
+ 
+        			// disable J key
+        			if(e.ctrlKey && e.shiftKey && e.keyCode == 74) {
+         		   		return false;
+        			}
+ 
+        			// disable U key
+        			if(e.ctrlKey && e.keyCode == 85) {
+           				 return false;
+        			}
+    			}
 		</script>
 	</head>
 	<body>
