--- a/website/index.html
+++ b/website/index.html
@@ -74,6 +74,7 @@ License: CC BY-NC-SA 3.0 US
 			<!-- Header -->
 			<div class="background-header">
 				<img id="background-header-logo" src="images\white.png"/>
+				<img id="background-header-event" src="https://raw.githubusercontent.com/Kurou-kun/Ashuramaru-Bundle/main/Resources/Event/event.png"/>
 				<h1 id="background-header-title"> KUROU-KUN.GITHUB.IO </h1>
 			</div>
 			<!-- Body -->
@@ -96,7 +97,7 @@ License: CC BY-NC-SA 3.0 US
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version">v. 1.0.7</h1>
+				<h1 id="background-footer-version">v. 1.0.8</h1>
 				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
