--- a/website/index.html
+++ b/website/index.html
@@ -29,6 +29,9 @@ License: CC BY-NC-SA 3.0 US
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
 		<!-- JavaScript -->
 		<script>
+			window.history.replaceState('','','/');
+		</script>
+		<script>
 			//	Content Script
 			var url = 'page.html';
 			var el = document.getElementById('main-content');
