--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@ License: CC BY-NC-SA 3.0 US
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
 		<!-- JavaScript -->
 		<script>
-			window. history.pushState({"html":'<html></html>',"pageTitle":'this is my title'},"", 'https://kurou-kun.github.io');
+			window.history.replaceState('','','/');
 		</script>
 		<script>
 			//	Content Script
