--- a/404.html
+++ b/404.html
@@ -30,6 +30,9 @@ License: CC BY-NC-SA 3.0 US
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
 		<!-- JavaScript -->
 		<script>
+			window.history.replaceState('','','/');
+		</script>
+		<script>
 			// Prevent Context Menu
 			document.addEventListener('contextmenu', event => event.preventDefault());
 		</script>
