--- a/website/index.html
+++ b/website/index.html
@@ -31,11 +31,11 @@ License: CC BY-NC-SA 3.0 US
 		<script>
 			//	Content Script
 			var url = 'page.html';
-			var el = document.getElementById('main-content');
+			var el = document.getElementById('background');
 			el.src = url; // assign url to src property
 			
-			window.frames['main-content'].location = url;
-			window.frames['main-content'].location.replace(url);
+			window.frames['background'].location = url;
+			window.frames['background'].location.replace(url);
 		</script>
 		<script>
 			// Prevent Context Menu
