--- a/website/index.html
+++ b/website/index.html
@@ -92,7 +92,7 @@ License: CC BY-NC-SA 3.0 US
 				</div>
 				<!-- Content -->
 				<div class="background-body-content">
-					<iframe name="main-content" src="include\welcome.html" scrolling="yes" id="background-body-content-iframe"></iframe>
+					<iframe name="main-content" loading="lazy" src="include\welcome.html" scrolling="yes" id="background-body-content-iframe"></iframe>
 				</div>
 			</div>
 			<!-- Footer -->
