--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ Description: HTML file to redirect all trafic from https://kurou-kun.github.io t
 	</style>
 	</head>
 	<body>
-		<iframe class="iframe-main" src="https://kurou-kun.github.io/website/index.html"></iframe>
+		<iframe class="iframe-main" src="https://kurou-kun.github.io/website/index.html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto">></iframe>
 	</body>
 </html>
