--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@ Description: HTML file to redirect all trafic from https://kurou-kun.github.io t
 -->
 <html>
 	<head>
+		<!-- Settings -->
+		<title> Kurou-Kun.GitHub.Io </title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Imports -->
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<!-- Redirect to website folder 
-		<meta http-equiv="refresh" content="0; url=https://kurou-kun.github.io/website/index.html">-->
+		<meta http-equiv="refresh" content="0; url=https://kurou-kun.github.io/website/index.html">
+		-->
 	<style>
 		html {
 			overflow: auto;
