--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Description: HTML file to redirect all trafic from https://kurou-kun.github.io t
 <html>
 	<head>
 		<!-- Imports -->
-		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="website/images/favicon.ico">
 		<!-- Settings -->
 		<title> Kurou-Kun.GitHub.Io </title>
 		<meta charset="UTF-8">
