--- a/index.html
+++ b/index.html
@@ -22,8 +22,39 @@ Description: HTML file to redirect all trafic from https://kurou-kun.github.io t
 		<style>
 			html {
 				overflow: auto;
+				animation: fadeIn 2s;
+				-webkit-animation: fadeIn 2s;
+				-moz-animation: fadeIn 2s;
+				-o-animation: fadeIn 2s;
+				-ms-animation: fadeIn 2s;
+				background-color: black;
 			}
-	 
+
+			@keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
+
+			@-moz-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
+
+			@-webkit-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
+
+			@-o-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
+
+			@-ms-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
+				
 			html, body, div, iframe {
 				margin: 0px; 
 				padding: 0px; 
@@ -41,6 +72,6 @@ Description: HTML file to redirect all trafic from https://kurou-kun.github.io t
 		</style>
 	</head>
 	<body>
-		<iframe class="iframe-main" src="https://kurou-kun.github.io/website/index.html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto">></iframe>
+		<iframe class="iframe-main" src="https://kurou-kun.github.io/website/index.html" loading="lazy" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto">></iframe>
 	</body>
 </html>
