--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@ License: CC BY-NC-SA 3.0 US
 		<title> Kurou-Kun.GitHub.Io </title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="refresh" content="5; url=https://kurou-kun.github.io/website/index.html">
+		<meta http-equiv="refresh" content="5; url=.\index.html">
 		<!-- Imports -->
 		<link rel="icon" type="image/x-icon" href="https://kurou-kun.github.io/website/images/favicon.ico">
 		<link rel="stylesheet" href="https://kurou-kun.github.io/website/style.css">
@@ -42,7 +42,7 @@ License: CC BY-NC-SA 3.0 US
 			<!-- Header -->
 			<div class="background-header">
 				<img id="background-header-logo" src="https://kurou-kun.github.io/website/images/white.png"/>
-				<h1 id="background-header-title"> KUROU-KUN.GITHUB.IO </h1>
+				<h1 id="background-header-title"<> KUROU-KUN.GITHUB.IO </h1>
 			</div>
 			<div class="background-body">
 				<!-- Sidebar -->
