--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ License: CC BY-NC-SA 3.0 US
 		<title> Kurou-Kun.GitHub.Io </title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="viewport" content="height=device-height, initial-scale=1.0">
+		<noscript>
+			<meta http-equiv="refresh" content="0; url=nojava.html"/>
+		</noscript>
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,6 +89,7 @@ License: CC BY-NC-SA 3.0 US
 							<li><a href="website\include\welcome.html"  id="sidebar-text" target="main-content">Welcome</a></li>
 							<li><a href="website\include\projects.html"  id="sidebar-text" target="main-content">Projects</a></li>
 							<li><a href="website\include\repositories.html"  id="sidebar-text" target="main-content">Repositories</a></li>
+							<li><a href="website\include\blog.html"  id="sidebar-text" target="main-content">Blog</a></li>
 						</ul>
 						<div class="background-body-sidebar-seperator">
 					</div>
@@ -98,7 +101,7 @@ License: CC BY-NC-SA 3.0 US
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version">v. 1.1.3</h1>
+				<h1 id="background-footer-version">v. 1.1.4</h1>
 				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
 			</div>
 		</div>
