--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ License: CC BY-NC-SA 3.0 US
 							<li><a href="website\include\welcome.html"  id="sidebar-text" target="main-content">Welcome</a></li>
 							<li><a href="website\include\projects.html"  id="sidebar-text" target="main-content">Projects</a></li>
 							<li><a href="website\include\repositories.html"  id="sidebar-text" target="main-content">Repositories</a></li>
-							<li><a href="website\include\blog.html"  id="sidebar-text" target="main-content">Blog</a></li>
+							<li><a href="#"  id="sidebar-text" target="main-content">Blog</a></li>
 						</ul>
 						<div class="background-body-sidebar-seperator">
 					</div>
